# SmartScreenAgent

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: verify.yml
backend/app/: config.py  database.py  deps.py  logging_config.py  main.py  middleware.py
backend/app/cli/: import_rules.py
backend/app/models/: __init__.py  audit_log.py  base.py  candidate.py  candidate_embedding.py  feedback.py  golden_set.py  ingestion_job.py  jd.py  rule_version.py  score.py  user.py
backend/app/routers/: auth.py  candidates.py  candidates_read.py  feedback.py  golden_set.py  health.py  jds.py
backend/app/rules/: excel_importer.py  schema.py
backend/app/schemas/: feedback.py  golden_set.py  read.py
backend/tests/: conftest.py  test_bootstrap.py
docs/: superpowers-workflow-best-practices.md
docs/specs/: 2026-05-12-resume-screening-agent-design.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: a11y.spec.ts  feedback.spec.ts  golden-path.spec.ts  golden-set.spec.ts
frontend/playwright-report/: index.html
frontend/src/: middleware.ts
migrations/: env.py
migrations/versions/: 0e57f449e555_wp3_ingestion_jobs.py  1e9b39dbf340_wp6a_feedback_constraints.py  2f27938b430b_wp3_ingestion_sha256_active_unique.py  3884ec28fea9_baseline_schema.py  b57c2f9e1a6d_wp1_raw_file_metadata.py  f412481450cf_wp6b_golden_set_label_check.py
scripts/: verify.py  verify_external_contracts.py
(+217 files in other folders)
